static/css/misc.less
/* ==========================================================================
   cfgov-refresh
   misc
   ========================================================================== */

/* topdoc
  name: Styled link
  family: cfgov-misc
  patterns:
    - name: .styled-link
      markup: |
        <a class="styled-link" href="#">
            Default styled link
        </a>
      codenotes:
        - .styled-link
  tags:
    - cfgov-misc
*/

.styled-link {
    @font-size: 16px;

    border-bottom-width: 1px;
    .webfont-medium();
    font-size: unit(@font-size / @base-font-size-px, em);
}


/* topdoc
  name: Jump link
  family: cfgov-misc
  patterns:
    - name: .jump-link
      markup: |
        <a class="jump-link" href="#">
            Default jump link
        </a>
      codenotes:
        - .jump-link
    - name: .jump-link__large (modifier)
      markup: |
        <a class="jump-link jump-link__large" href="#">
            Large jump link
        </a>
      codenotes:
        - .jump-link__large
    - name: .jump-link__download (modifier)
      markup: |
        <a class="jump-link jump-link__download" href="#">
            Jump link using the download icon from cf-icons
        </a>
      codenotes:
        - .jump-link__download
    - name: .jump-link__external-link (modifier)
      markup: |
        <a class="jump-link jump-link__external-link" href="#">
            Jump link using the external-link icon from cf-icons
        </a>
      codenotes:
        - .jump-link__external-link
    - name: .jump-link__bg (modifier)
      markup: |
        <a class="jump-link jump-link__bg" href="#">
            Jump link with grey background and solid borders on small screens
        </a>
      codenotes:
        - .jump-link__bg
    - name: .jump-link__back (modifier)
      markup: |
        <a class="jump-link jump-link__back" href="#">
            Jump link with back arrow
        </a>
      codenotes:
        - .jump-link__back
  tags:
    - cfgov-misc
*/

.jump-link {
    @font-size: 16px;

    position: relative;
    // Right margin gives the absolutely positioned icon somewhere to go without
    // inheriting the bottom border.
    margin-right: 1.5em;
    border-bottom-width: 1px;
    .webfont-medium();
    font-size: unit(@font-size / @base-font-size-px, em);
    &:after {
        // Inserts the cf-icon-right (arrow) glyph.
        content: "\e002";
    }

    &__large {
        @font-size: 18px;
        // Right margin gives the absolutely positioned icon somewhere to go without
        // inheriting the bottom border.
        margin-right: 1.5em;
        font-size: unit(@font-size / @base-font-size-px, em);
    }

    &__download {
        &:after {
            // Inserts the cf-icon-download glyph.
            content: "\e406";
        }
    }

    &__external-link {
        &:after {
            // Inserts the cf-icon-external-link glyph.
            content: "\e610";
        }
    }

    &:after {
        .cf-icon();
        position: absolute;
        bottom: 0;
        right: -1em;
        border-bottom: none;
    }
    
    &__back {
        margin-left: 1.25em;
        
        &:after {
            content: ''
        }
        
        &:before {
            .cf-icon();
            // Inserts the cf-icon-left (arrow) glyph.
            content: "\e000";
            position: absolute;
            left: -1.25em;
            top: .2em;
            padding-right: .25em;
            border-bottom: none;
        }
    }

    .list__links & {
        margin-top: -1px;
    }

    .respond-to-max(599px, {
        display: block;
        padding: unit(10px / @base-font-size-px, em) 1.25em unit(10px / @base-font-size-px, em) 0;
        border: dotted @pacific;
        border-width: 1px 0;
        margin-right: 0;
        width: 100%;
        text-align: left;

        &:after {
            margin-bottom: -0.625em;
            right: 0;
            bottom: 50%;
            text-align: right;
        }
        
        &__bg {
            background: @gray-10;
            border: solid @gray-20;
            border-width: 1px 0;
            padding: unit(10px / @base-font-size-px, em) 1.25em unit(10px / @base-font-size-px, em) 1em;
            &:after {
                right: 1em;
            }
        }
        
        &__back {
            padding: unit(10px / @base-font-size-px, em) 0 unit(10px / @base-font-size-px, em) 1.25em;
            margin-left: 0;
            &:after {
                content: ''
            }

            &:before {
                margin-top: -0.5em;
                left: 0;
                top: 50%;
            }
        }
    });
}
/* ... */

